MiniJavaCompiler/src/mjc/frontend/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
package mjc.frontend;

 import java.io.InputStream;

import mjc.frontend.syntaxtree.And;
import mjc.frontend.syntaxtree.ArrayAssign;
import mjc.frontend.syntaxtree.ArrayLength;
import mjc.frontend.syntaxtree.ArrayLookup;
import mjc.frontend.syntaxtree.Assign;
import mjc.frontend.syntaxtree.Block;
import mjc.frontend.syntaxtree.BooleanType;
import mjc.frontend.syntaxtree.Call;
import mjc.frontend.syntaxtree.ClassDecl;
import mjc.frontend.syntaxtree.ClassDeclList;
import mjc.frontend.syntaxtree.Comp;
import mjc.frontend.syntaxtree.Exp;
import mjc.frontend.syntaxtree.ExpList;
import mjc.frontend.syntaxtree.False;
import mjc.frontend.syntaxtree.Identifier;
import mjc.frontend.syntaxtree.IdentifierExp;
import mjc.frontend.syntaxtree.IdentifierType;
import mjc.frontend.syntaxtree.If;
import mjc.frontend.syntaxtree.IntArrayType;
import mjc.frontend.syntaxtree.IntBinop;
import mjc.frontend.syntaxtree.IntegerLiteral;
import mjc.frontend.syntaxtree.IntegerType;
import mjc.frontend.syntaxtree.MethodDecl;
import mjc.frontend.syntaxtree.MethodDeclList;
import mjc.frontend.syntaxtree.NewArray;
import mjc.frontend.syntaxtree.NewObject;
import mjc.frontend.syntaxtree.Not;
import mjc.frontend.syntaxtree.Or;
import mjc.frontend.syntaxtree.Print;
import mjc.frontend.syntaxtree.Program;
import mjc.frontend.syntaxtree.Statement;
import mjc.frontend.syntaxtree.StatementList;
import mjc.frontend.syntaxtree.This;
import mjc.frontend.syntaxtree.True;
import mjc.frontend.syntaxtree.Type;
import mjc.frontend.syntaxtree.VarDecl;
import mjc.frontend.syntaxtree.VarDeclList;
import mjc.frontend.syntaxtree.While;

public class MiniJavaParser implements MiniJavaParserConstants {

            /** Main entry point. */
            public static void main(String[] args) throws ParseException {
                MiniJavaParser parser = new MiniJavaParser(System.in);
                Program prog = parser.Prog();
                System.out.println("Printed tree:");
                System.out.println(prog.strRepr(1));
            }

            public Program parse(InputStream content) throws ParseException {
                MiniJavaParser parser = new MiniJavaParser(content);
                return parser.Prog();
            }

            public MiniJavaParser() {}

  static final public Program Prog() throws ParseException {
    ClassDecl mc;
    ClassDecl cd;
    ClassDeclList cdl = new ClassDeclList();
    mc = MainClass();
    cdl.addElement(mc);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cd = ClassDecl();
      cdl.addElement(cd);
    }
        Program p = new Program(cdl);
        p.setPosition(mc.getLine(), mc.getColumn());
        {if (true) return p;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl MainClass() throws ParseException {
    Token t1, t2, t3, t4;
    Identifier i1, i2, i3, superClass = null;
    VarDeclList fl = new VarDeclList();
    VarDecl vd;
    VarDeclList vdl = new VarDeclList();
    Statement s;
    StatementList sl = new StatementList();
    MethodDeclList mdl = new MethodDeclList();
    t1 = jj_consume_token(CLASS);
    i1 = id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      superClass = id();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(46);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    t2 = jj_consume_token(VOID);
    t3 = jj_consume_token(MAIN);
    jj_consume_token(LPAR);
    t4 = jj_consume_token(STRING);
    jj_consume_token(47);
    jj_consume_token(48);
    i2 = id();
    jj_consume_token(RPAR);
    jj_consume_token(46);
    label_2:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_2;
      }
      vd = VarDecl();
      vdl.addElement(vd);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
      case IF:
      case FOR:
      case ID:
      case 46:
      case 51:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      s = Statement();
      sl.addElement(s);
    }
    jj_consume_token(49);
    jj_consume_token(49);
        fl.addElement(new VarDecl(new IdentifierType("String[]", t4.beginLine, t4.beginColumn), i2));
        i3 = new Identifier(t3.image);
        i3.setPosition(t3.beginLine, t3.beginColumn);
        mdl.addElement(
            new MethodDecl(
                new IntegerType(t2.beginLine, t2.beginColumn),
                i3, fl, vdl, sl, new IntegerLiteral(0), true
            )
        );
        ClassDecl mainclass = new ClassDecl(i1, new VarDeclList(), mdl);
        mainclass.setPosition(t1.beginLine, t1.beginColumn);
        if (superClass != null) mainclass.setExtends(superClass.toString());
        {if (true) return mainclass;}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
    Token t;
    Identifier i, superClass = null;
    VarDecl vd;
    VarDeclList vdl = new VarDeclList();
    MethodDecl md;
    MethodDeclList mdl = new MethodDeclList();
    t = jj_consume_token(CLASS);
    i = id();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      superClass = id();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(46);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case ID:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      vd = VarDecl();
                               vdl.addElement(vd);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      md = MethodDecl();
                                  mdl.addElement(md);
    }
    jj_consume_token(49);
            ClassDecl cd = new ClassDecl(i, vdl, mdl);
            cd.setPosition(t.beginLine, t.beginColumn);
        if (superClass != null) cd.setExtends(superClass.toString());
            {if (true) return cd;}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
    Type t;
    Identifier i;
    t = Type();
    i = id();
    jj_consume_token(SEMI);
    VarDecl vd = new VarDecl(t, i);
    vd.setPosition(t.getLine(), t.getColumn());
    {if (true) return vd;}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
    Token tk;
    Type t;
    Identifier i;
    VarDeclList fl = new VarDeclList();
    VarDecl vd;
    VarDeclList vdl = new VarDeclList();
    Statement s;
    StatementList sl = new StatementList();
    Exp e;
    tk = jj_consume_token(PUBLIC);
    t = Type();
    i = id();
    jj_consume_token(LPAR);
    fl = FormalList();
    jj_consume_token(RPAR);
    jj_consume_token(46);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      vd = VarDecl();
                                           vdl.addElement(vd);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WHILE:
      case IF:
      case FOR:
      case ID:
      case 46:
      case 51:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      s = Statement();
                           sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Exp();
    jj_consume_token(SEMI);
    jj_consume_token(49);
        MethodDecl md = new MethodDecl(t, i, fl, vdl, sl, e, false);
        md.setPosition(tk.beginLine, tk.beginColumn);
        {if (true) return md;}
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclList FormalList() throws ParseException {
    Type t;
    Identifier i;
    VarDeclList fl = new VarDeclList();
    VarDecl f;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case ID:
      t = Type();
      i = id();
            f = new VarDecl(t,i);
            f.setPosition(t.getLine(), t.getColumn());
            fl.addElement(f);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 50:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_8;
        }
        jj_consume_token(50);
        t = Type();
        i = id();
                f = new VarDecl(t,i);
                f.setPosition(t.getLine(), t.getColumn());
                fl.addElement(f);
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
      {if (true) return fl;}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
    Token t;
    Identifier i;
    if (jj_2_3(2)) {
      t = jj_consume_token(INT);
      jj_consume_token(47);
      jj_consume_token(48);
                            {if (true) return new IntArrayType(t.beginLine, t.beginColumn);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        t = jj_consume_token(BOOLEAN);
                        {if (true) return new BooleanType(t.beginLine, t.beginColumn);}
        break;
      case INT:
        t = jj_consume_token(INT);
                    {if (true) return new IntegerType(t.beginLine, t.beginColumn);}
        break;
      case ID:
        i = id();
                   {if (true) return new IdentifierType(i.toString(), i.getLine(), i.getColumn());}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
    Token t;
    Statement s1, s2, s3;
    StatementList sl = new StatementList();
    Exp e1 = null;
    Exp e2 = null;
    While w;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 46:
      t = jj_consume_token(46);
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case WHILE:
        case IF:
        case FOR:
        case ID:
        case 46:
        case 51:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_9;
        }
        s1 = Statement();
                                   sl.addElement(s1);
      }
      jj_consume_token(49);
            Block b = new Block(sl);
            b.setPosition(t.beginLine, t.beginColumn);
            {if (true) return b;}
      break;
    case IF:
      t = jj_consume_token(IF);
      jj_consume_token(LPAR);
      e1 = Exp();
      jj_consume_token(RPAR);
      s1 = Statement();
      s2 = ElseStm();
            If f = new If(e1,s1,s2);
            f.setPosition(t.beginLine, t.beginColumn);
            {if (true) return f;}
      break;
    case WHILE:
      t = jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      e1 = Exp();
      jj_consume_token(RPAR);
      s1 = Statement();
            w = new While(e1,s1);
            w.setPosition(t.beginLine, t.beginColumn);
            {if (true) return w;}
      break;
    case FOR:
      t = jj_consume_token(FOR);
      jj_consume_token(LPAR);
      s1 = Statement();
      e1 = Exp();
      jj_consume_token(SEMI);
      s2 = AssignStatement();
      jj_consume_token(RPAR);
      s3 = Statement();
            sl.addElement(s1);
            StatementList sl2 = new StatementList();
            sl2.addElement(s3);
            sl2.addElement(s2);
            Block b1 = new Block(sl2);
            w = new While(e1, b1);
            sl.addElement(w);
            Block b2 = new Block(sl);
            b2.setPosition(t.beginLine, t.beginColumn);
            {if (true) return b2;}
      break;
    case 51:
      t = jj_consume_token(51);
      jj_consume_token(LPAR);
      e1 = Exp();
      jj_consume_token(RPAR);
      jj_consume_token(SEMI);
            Print p = new Print(e1);
            p.setPosition(t.beginLine, t.beginColumn);
            {if (true) return p;}
      break;
    case ID:
      s1 = AssignStatement();
      jj_consume_token(SEMI);
                                      {if (true) return s1;}
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement AssignStatement() throws ParseException {
    Identifier i;
    Exp e1, e2;
    IdentifierExp ie;
    Assign a;
    i = id();
                ie = new IdentifierExp(i.toString());
                ie.setPosition(i.getLine(), i.getColumn());
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      jj_consume_token(47);
      e1 = Exp();
      jj_consume_token(48);
      jj_consume_token(ASSIGN);
      e2 = Exp();
            ArrayAssign aa = new ArrayAssign(ie,e1,e2);
            aa.setPosition(ie.getLine(), ie.getColumn());
            {if (true) return aa;}
      break;
    case ASSIGN:
      jj_consume_token(ASSIGN);
      e2 = Exp();
            a = new Assign(ie,e2);
            a.setPosition(ie.getLine(), ie.getColumn());
            {if (true) return a;}
      break;
    case PLUS:
      jj_consume_token(PLUS);
      jj_consume_token(PLUS);
            e2 = new IntBinop(ie, new IntegerLiteral(1), "+");
            a = new Assign(ie, e2);
            a.setPosition(ie.getLine(), ie.getColumn());
            {if (true) return a;}
      break;
    case MINUS:
      jj_consume_token(MINUS);
      jj_consume_token(MINUS);
            e2 = new IntBinop(ie, new IntegerLiteral(1), "-");
            a = new Assign(ie, e2);
            a.setPosition(ie.getLine(), ie.getColumn());
            {if (true) return a;}
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Statement ElseStm() throws ParseException {
    Statement s;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      s = Statement();
                              {if (true) return s;}
      break;
    default:
      jj_la1[13] = jj_gen;
                                              {if (true) return null;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
    Exp orterm;
    Exp expprim;
    orterm = OrTerm();
    expprim = ExpPrim(orterm);
      {if (true) return expprim;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpPrim(Exp e1) throws ParseException {
    Exp e2;
    Token t;
    Identifier i;
    ExpList el = new ExpList();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 47:
      t = jj_consume_token(47);
      e2 = Exp();
      jj_consume_token(48);
                ArrayLookup alp = new ArrayLookup(e1,e2);
                alp.setPosition(t.beginLine, t.beginColumn);
                {if (true) return alp;}
      break;
    case LENGTH:
      t = jj_consume_token(LENGTH);
                ArrayLength alt = new ArrayLength(e1);
                alt.setPosition(t.beginLine, t.beginColumn);
                {if (true) return alt;}
      break;
    case 52:
      t = jj_consume_token(52);
      i = id();
      el = ExpList();
                Call c = new Call(e1,i,el);
                c.setPosition(t.beginLine, t.beginColumn);
                {if (true) return c;}
      break;
    default:
      jj_la1[14] = jj_gen;
          {if (true) return e1;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp OrTerm() throws ParseException {
    Exp andterm;
    Exp ortermprim;
    Exp expprim;
    andterm = AndTerm();
    expprim = ExpPrim(andterm);
    ortermprim = OrTermPrim(expprim);
      {if (true) return ortermprim;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp OrTermPrim(Exp o) throws ParseException {
    Exp andterm;
    Exp ortermprim;
    Exp expprim;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      andterm = AndTerm();
      expprim = ExpPrim(andterm);
      ortermprim = OrTermPrim(new Or(o,expprim));
          {if (true) return ortermprim;}
      break;
    default:
      jj_la1[15] = jj_gen;
                                   {if (true) return o;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndTerm() throws ParseException {
    Exp compterm;
    Exp andtermprim;
    Exp expprim;
    compterm = CompTerm();
    expprim = ExpPrim(compterm);
    andtermprim = AndTermPrim(expprim);
      {if (true) return andtermprim;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp AndTermPrim(Exp a) throws ParseException {
    Exp compterm;
    Exp andtermprim;
    Exp expprim;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      compterm = CompTerm();
      expprim = ExpPrim(compterm);
      andtermprim = AndTermPrim(new And(a, expprim));
          {if (true) return andtermprim;}
      break;
    default:
      jj_la1[16] = jj_gen;
                                    {if (true) return a;}
    }
    throw new Error("Missing return statement in function");
  }
